Fix design bug:
- Facility management-> Parent company details popup. Validation message text is getting overlapped.

--- a/src/assets/css/precisemri-theme.css
+++ b/src/assets/css/precisemri-theme.css
@@ -2571,7 +2571,7 @@ button {
 	display: inline-block;
 	flex-wrap: initial;
 	align-items: flex-end;
-	white-space: nowrap;
+	/* white-space: nowrap; */
 	/*overflow: hidden;*/
 	text-overflow: ellipsis;
 	margin: 0;
@@ -7054,4 +7054,8 @@ tree-node:last-child > .tree-node > .tree-children::after {
 }
 #CalendarSchedulerWindow .modal-body .dhx_scheduler_month, #CalendarSchedulerWindow .modal-body .dhx_scheduler_week .dhx_cal_data, #CalendarSchedulerWindow .modal-body .dhx_scheduler_timeline .dhx_cal_data, #CalendarSchedulerWindow .modal-body .dhx_scheduler_day .dhx_cal_data{
 	overflow-y: hidden;
+}
+.invalid-feedback{
+	line-height: 17px;
+	margin-top: 35px;
 }
